# vmod-reqwest

./: .gitignore  API.md  Cargo.toml  Dockerfile  README.md  build.sh  justfile  vmod.vcc
.github/workflows/: docker.yaml  tests.yaml
docker/: Dockerfile
pkg/alpine/: APKBUILD
pkg/arch/: PKGBUILD
src/: implementation.rs  lib.rs
tests/: test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc  test06.vtc  test07.vtc  test08.vtc  test09.vtc  test10.vtc  test11.vtc  test12.vtc  test13.vtc  test14.vtc
