[package]
name = "vmod_reqwest"
version = "0.0.12"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Guillaume Quintard guillaume.quintard@gmail.com"]

[dependencies]
varnish = { path = "../varnish-rs/varnish" }
varnish-sys = { path = "../varnish-rs/varnish-sys" }
varnish-macros = { path = "../varnish-rs/varnish-macros" }
regex = "1.5"
lru = "0.7.1"
bytes = "1.1.0"
reqwest = { version = "0.11", features = ["stream", "deflate", "gzip", "brotli", "native-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
hyper = "0.14.16"
anyhow = "1.0"
serde_json = "1"

[lib]
crate-type = ["cdylib"]
