[package]
name = "vmod_reqwest"
version = "0.0.13"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Guillaume Quintard guillaume.quintard@gmail.com"]

[dependencies]
anyhow = "1.0"
bytes = "1.1.0"
futures = "0.3"
futures-util = "0.3"
hyper = "0.14.16"
lru = "0.7.1"
regex = "1.5"
reqwest = { version = "0.11", features = ["stream", "deflate", "gzip", "brotli", "native-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
varnish = { git = "https://github.com/mnutt/varnish-rs.git", branch = "expose-stats", features = [ "ffi", "vsc" ] }

[lib]
crate-type = ["cdylib"]
